[tool.poetry]
name = "dicom-data-explorer"
version = "0.1.0"
description = "DICOM data explorer app"
readme = "README.md"
packages = [{ include = "dicom_data_explorer" }]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "*"
reflex = "0.8.24.post1"
pandas = "*"
idc-index = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
